# conference-discovery

./: .gitignore  CHANGELOG  INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  chrono-chat.cpp  chrono-chat.h  conference-discovery-sync.cpp  conference-discovery-sync.h  conference-info.h  configure  configure.ac  external-observer.h  test-chrono-chat.cpp  test-chrono-chat.h  test-conference-discovery-exfil.cpp  test-conference-discovery-exfil.h  test-conference-discovery-sync.cpp  test-conference-discovery-sync.h  test-exfil.cpp  test-memory-content-cache.cpp  test-sync-based.cpp  test.cpp  test.h
include/: chrono-chat.h  conference-discovery-sync.h  conference-discovery.h  conference-info-factory.h  conference-info.h  entity-discovery.h  entity-serializer.h  external-observer.h  sync-based-discovery.h
src/: chatbuf.pb.cc  chrono-chat.cpp  conference-discovery-sync.cpp  conference-discovery-sync.h  conference-discovery.cpp  conference-info-factory.h  conference-info.h  entity-discovery.cpp  new-chat.h  sync-based-discovery.cpp  sync-based-discovery.h
tests/: test-both.cpp  test-both.h  test-chat.cpp  test.h
